add task #18 fix